Update Chinese (Simplified) Translation
Sync EN

Signed-off-by: xiaoleGun <1592501605@qq.com>

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -48,12 +48,16 @@
 
     <string name="creating_partition">创建 %1$s 分区</string>
     <string name="installing_partition">正在处理 %1$s 分区…</string>
+    <string name="installing">安装中…</string>
 
     <!-- ADB install -->
     <string name="require_adb_cmd_to_continue">准备工作已完成，您需要输入一个命令以继续安装。</string>
     <string name="see_commands">查看命令</string>
 
     <!-- Installation errors -->
+
+    <!-- Already running a installed DSU -->
+    <string name="already_running_dsu">不支持在运行DSU时再次安装DSU，请将设备重新启动至默认系统。</string>
 
     <!-- Already installed DSU card -->
     <string name="discard_dsu_otg">已经安装了一个 DSU，是否要移除并继续安装？\n\n**已安装 DSU 中的所有数据将在移除时删除。</string>
